@@ -1,6 +1,7 @@
 This file documents the revision history for Perl extension Catalyst.
 
 5.59
+        - Added REDIRECT_URL support
         - Fixed forward to classes ($c->forward(qw/MyApp foo/))
 
 5.58    2005-11-24 10:51:00
